Update button global style to avoid too much specificity

--- a/src/scss/partials/_account-side-menu.scss
+++ b/src/scss/partials/_account-side-menu.scss
@@ -5,7 +5,7 @@ aside
     width: 100%;
     background-color: $primary-color;
 
-    button:not(:disabled)
+    button
     {
         padding: 5px;
         width: 20%;
